force-app/main/default/objects/Deployment_Approval__c/Deployment_Approval__c.object-meta.xml
<CustomObject>
    <description>Used for Production deployment approvals</description>
    <label>Deployment Approval</label>
    <nameField>
        <displayFormat>APR-{0000}</displayFormat>
        <label>Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>