force-app/main/default/objects/Deployment_Approval__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <description>Decision rationale</description>
    <inlineHelpText>Decision rationale</inlineHelpText>
    <label>Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>