force-app/main/default/objects/Deployment_Approval__c/fields/Copado_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Copado_Promotion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to promotion</description>
    <label>Copado Promotion</label>
    <referenceTo>copado__Promotion__c</referenceTo>
    <relationshipLabel>Deployment Approvals</relationshipLabel>
    <relationshipName>Deployment_Approvals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>