force-app/main/default/objects/Deployment_Approval__c/fields/Demployment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Demployment_Summary__c</fullName>
    <description>What&apos;s being deployed</description>
    <inlineHelpText>What&apos;s being deployed and potential risks</inlineHelpText>
    <label>Demployment Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>