force-app/main/default/objects/Deployment_Approval__c/fields/Deployment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsible developer who triggered the deployment</description>
    <inlineHelpText>Responsible developer who triggered the deployment</inlineHelpText>
    <label>Deployment Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deployment_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>