force-app/main/default/objects/Deployment_Approval__c/fields/Emergency_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hotfix exception flag</description>
    <inlineHelpText>Hotfix exception flag</inlineHelpText>
    <label>Emergency Bypass</label>
    <type>Checkbox</type>
</CustomField>