force-app/main/default/objects/Deployment_Approval__c/fields/Target_Environment__c.field-meta.xml
<CustomField>
    <fullName>Target_Environment__c</fullName>
    <defaultValue>&quot;Production&quot;</defaultValue>
    <description>Production environment</description>
    <inlineHelpText>Production environment</inlineHelpText>
    <label>Target Environment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>